[gd_scene load_steps=4 format=3 uid="uid://dlnhqqom26di8"]

[ext_resource type="Script" path="res://Characters/Enemy/enemy_hard.gd" id="1_7yt6b"]
[ext_resource type="Texture2D" uid="uid://dhaluayeqjc8b" path="res://Characters/SimplePixelSpaceships.png" id="2_fkw7p"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uy1gw"]
radius = 18.0
height = 36.0

[node name="EnemyHard" type="CharacterBody2D"]
position = Vector2(193, 107)
scale = Vector2(1.4791, 1.4791)
script = ExtResource("1_7yt6b")

[node name="Ship" type="Sprite2D" parent="."]
position = Vector2(1.90735e-06, 1.90735e-06)
scale = Vector2(3.07895, 3.07895)
texture = ExtResource("2_fkw7p")
hframes = 10
vframes = 17
frame = 113

[node name="MarkerLeft" type="Marker2D" parent="."]
position = Vector2(-10.8174, 31)

[node name="MarkerRight" type="Marker2D" parent="."]
position = Vector2(12.8456, 30.4239)

[node name="Area2D" type="Area2D" parent="." groups=["enemy"]]
scale = Vector2(1.1588, 1.1588)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(1.04661, 1.04661)
shape = SubResource("CapsuleShape2D_uy1gw")

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
